# aionysus.wine

./: .gitignore  CLAUDE.md  PRD.md  README.md  RESTART_PROMPT.md  TSCR_TECHNIQUE_DOCUMENTATION.md  next.config.ts  package-lock.json  package.json  vercel.json
.claude/reference/: architecture.md  mdx-dashboards.md  scraping.md
agent/: .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt
agent/src/: __init__.py  agent.py  database.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: HeaderClient.tsx  VoiceInput.tsx  (+1 more)
public/: site.webmanifest
scripts/: .env.example  create-mdx-tables.js  delete-shopify-products.ts  enrich-wines.ts  package-lock.json  package.json  populate-destination.js  run-schema.ts  schema.sql  scrape-english-wines.ts  scrape-waddesdon.ts  scrape-wine-images.ts  setup-investment-data.ts  setup-pension-db.mjs  setup-pension-db.sql  setup_zep_graph.py  sync-shopify-products.ts  update-google-key-vercel.sh  update-google-key.sh
scripts/data/: cyprus.js
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: DynamicBackground.tsx  GlobalCopilotActions.tsx  GlobalVicSidebar.tsx  HumeWidget.tsx  InvestmentChartChat.tsx  InvestmentCharts.tsx  PageWrapper.tsx  TableOfContents.tsx  VoiceTranscriptSync.tsx  WineCardChat.tsx  WineImage.tsx  WinePageContext.tsx  providers.tsx
src/lib/: puppy-db.ts  seo-automation.ts  shopify.ts  unsplash.ts  wine-db.ts  wine-enrichment.ts
(+31 files in other folders)
