[project]
name = "aionysus-agent"
version = "0.1.0"
description = "Pydantic AI agent for Aionysus wine sommelier"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[google]>=0.0.20",
    "copilotkit>=0.1.30",
    "asyncpg>=0.30.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
